updated graph colors, created 2 more graphs with parameters changed

--- a/diffusion.Rmd
+++ b/diffusion.Rmd
@@ -1,16 +1,13 @@
 ---
 title: "Diffusion"
 output: html_document
+authors: Elmera Azadpour, Ryan Munnikhuis, Nikole Vannest
 ---
-
-
-
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(deSolve)
-
 ```
 
 # R implementation
